# zenet

./: .gitignore  Cargo.toml  flake.nix
examples/audio/: client.rs  main.rs  server.rs  tracing_setup.rs
examples/auth/: certificate.rs  client.rs  main.rs  server.rs
src/: lib.rs
zaudio/: Cargo.toml
zaudio/src/: codec.rs  lib.rs
zaudio/src/codec/: audio.rs  metadata.rs  mod.rs
zauth/: Cargo.toml
zauth/src/: codec.rs  lib.rs  session.rs
zauth/src/authenticator/: mac.rs  mod.rs
zauth/src/integration/: accept.rs  connect.rs  mod.rs
zauth/src/storage/: memory.rs  mod.rs
zenet-macros/: Cargo.toml
zenet-macros/src/: lib.rs
zenet-macros/src/define_fields/: ast.rs  codegen.rs  mod.rs  types.rs
zenet-macros/src/define_message/: ast.rs  codegen.rs  mod.rs
zwire/: Cargo.toml
zwire/src/: codec.rs  errors.rs  lib.rs
zwire/src/codec/: bytestring.rs  checked_add.rs  frame_codec.rs  length_prefix.rs  mod.rs  peek.rs  put.rs  take.rs  wired_fixed_bytes.rs  wired_int.rs
zwire/src/codec/bytes/: mod.rs  peek.rs  put.rs  string.rs  take.rs
zwire/src/codec/wired/: fixed_bytes.rs  int.rs  length_prefixed.rs  mod.rs  string.rs
zwire/src/helpers/: checked_add.rs  mod.rs
zwire/src/session/: mod.rs  simple.rs
