[package]
name = "zenet"
version = "0.0.0"
edition = "2024"

[dependencies]
zwire = { path = "./zwire", optional = true }
zauth = { path = "./zauth", optional = true }
quinn = { version = "0.11.9", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { version = "0.3.20", default-features = false, features = [ "std", "fmt", "ansi", "env-filter" ] }
rcgen = "0.14.5"
rustls = "0.23.35"
once_cell = "1.21.3"

[features]
default = [ "quinn", "zauth", "zwire" ]
quinn = [ "dep:quinn" ]
zwire = [ "dep:zwire" ]
zauth = ["zwire", "dep:zauth" ]

[workspace]
members = [
	"zauth", "zenet-macros",
    "zwire",
]

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
tracing = { version = "0.1.41", default-features = false, features = [ "std", "attributes" ] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"
futures = "0.3.31"
